--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <head>
-  <title>~name~</title>
+  <title>Wishing Well</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-	{{> page}}
+	{{> content}}
 </body>
