--- a/client/layout.html
+++ b/client/layout.html
@@ -1,4 +1,8 @@
 <template name="layout">
+	<script>
+		var img = new Image();
+		img.src = 'shallnotpass.gif';
+	</script>
   {{> navbar}}
   {{> yield}}
 	{{> footer}}
